OldArchive/01454b75e3833ffc7dc3174138e0dff2-9ac5ce49fb3bb81c20db0c664e0c63a1/output
+ g++ -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:5: warning: ‘auto’ changes meaning in C++11; please remove it [-Wc++0x-compat]
     auto x = 1234;
     ^
main.cpp:7:10: error: ‘x’ does not name a type
     auto x = 1234;
          ^
main.cpp:8:8: error: expected unqualified-id before ‘&&’ token
     int&& iref = 1234;
        ^
